# MHYVD

./: .gitignore  CLAUDE.md  Readme.md  pyproject.toml
.github/workflows/: ci.yml  download-upload.yml  scrape-list.yml
config/: default.yaml
docs/superpowers/plans/: 2026-06-08-github-actions-ci.md
docs/superpowers/specs/: 2026-06-08-github-actions-ci-design.md
src/: __init__.py  constants.py  logging_setup.py  main.py  models.py  registry.py  runtime.py
src/browser/: __init__.py  driver.py
src/cache/: __init__.py  download_cache.py  fetch_cache.py  list_export.py
src/classifier/: __init__.py  base.py  registry.py  rule_based.py  rules.py
src/config/: __init__.py  defaults.py  proxy.py  settings.py
src/downloader/: __init__.py  base.py  bilibili.py  paths.py  playwright_downloader.py  registry.py  url_resolver.py
src/pipeline/: __init__.py  fallback.py  pipeline.py
src/sources/: __init__.py  base.py  honkai_star_rail_cn.py  keys.py  registry.py  release_list.py
src/uploader/: __init__.py  base.py  gdrive.py  registry.py  streaming.py  webdav.py
tests/: __init__.py  test_bilibili.py  test_browser_driver.py  test_classifier.py  test_config_settings.py  test_download_cache.py  test_downloader_paths.py  test_fallback.py  test_fetch_cache.py  test_honkai_star_rail_cn.py  test_list_export.py  test_logging_setup.py  test_main_cli.py  test_main_upload_cli.py  test_models.py  test_pipeline.py  test_playwright_downloader.py  test_proxy.py  test_registry.py  test_release_list.py  test_runtime.py  test_source_base.py  test_source_helpers.py  test_source_keys.py  test_source_registry.py  test_uploader_base.py  test_uploader_gdrive.py  test_uploader_streaming.py  test_uploader_webdav.py  test_url_resolver.py
tests/integration/: test_browser_smoke.py
