[project]
name = "mhyvd"
version = "0.1.0"
description = "Scrape miHoYo/HoYoverse game news, classify articles, and download videos via a stealth Chromium browser."
readme = "Readme.md"
requires-python = "==3.11.*"
dependencies = [
    "PyYAML>=6.0",
    "playwright>=1.40",
    "playwright-stealth>=1.0.6",
]

[project.scripts]
mhyvd = "src.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
