[project]
name = "mhyvd"
version = "0.1.0"
description = "Scrape miHoYo/HoYoverse game news, classify articles, and download videos via a stealth Chromium browser."
readme = "Readme.md"
requires-python = "==3.11.*"
dependencies = [
    "PyYAML>=6.0",
    "playwright>=1.40",
    "playwright-stealth>=1.0.6",
]

[project.optional-dependencies]
gdrive = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.scripts]
mhyvd = "src.main:main"

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
# Reference-only code, not part of the CI quality gate.
extend-exclude = ["exp"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
# warn_unused_ignores is intentionally OFF: with ignore_missing_imports the
# presence/absence of Playwright stubs flips whether a `# type: ignore` is
# redundant, so flagging "unused" ignores produces false positives in CI.
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Tests inject duck-typed fakes where production code is annotated with concrete
# browser/driver types (an intentional seam, see CLAUDE.md). Type-checking the
# fakes against those concrete types is noise, so relax arg-type there.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type"]
